--- a/index.html
+++ b/index.html
@@ -1,23 +1,41 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 
 <head>
-    <title>Minha primeira página Web</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Universidade Unes</title>
+    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="shortcut icon" href="./src/css/imagens/Captura de tela_20240229_113233.ico" type="image/x-icon">
 </head>
 
 <body>
-    <h1 style="font-family: Verdana; border: 4px solid rgb(249, 125, 0); width:547px ;"> <!--CSS in line seria com comandos dessa forma-->
-        Aula de Desenvolvimento Web
-    </h1>
-    <p>
-        Desenvolvimento Web com HTML versão 5!
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet <strong>consectetur</strong>, adipisicing elit. Cumque modi consequatur, possimus ut
-        incidunt,
-        distinctio libero id temporibus at <mark> enim nam non quo</mark> <b>fuga</b> repellendus suscipit adipisci
-        natus <ins>quae</ins>.
-    </p>
-</body> <!-- aiii papaiii --> 
+    <div class="cabecalho">
+        <img src="./src/css/imagens/logo.png" alt="Logo da empresa">
+
+        <div class="link">
+            <a href="./index.html">
+                Home
+            </a>
+
+            <a href="./quem-somos.html">
+                Quem somos
+            </a>
+
+            <a href="./contato.html">
+                Contatos
+            </a>
+        </div>
+    </div>
+
+    <div class="corpo">
+    </div>
+
+    <div class="texto">
+    </div>
+
+    <div class="rodape">
+    </div>
+</body>
 
 </html>
