aula dev_web 05/03/2024

--- a/index.html
+++ b/index.html
@@ -29,12 +29,16 @@
     </div>
 
     <div class="corpo">
+        <img src="./src/css/imagens/capa.png" alt="Capa da faculdade para divulgação">
     </div>
 
     <div class="texto">
+    <h1 class="titulo">Sobre a Universidade</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ea officia quod fugit vitae a nostrum aut perspiciatis hic quaerat dignissimos, modi et ullam dolor? Suscipit commodi nesciunt tempora molestias. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam fuga, soluta laboriosam repellat adipisci ducimus animi? Cumque porro rerum sed rem fugiat similique eaque magnam asperiores soluta, ullam doloribus expedita.</p>
     </div>
 
     <div class="rodape">
+        <h3>Todos os direitos reservados</h3>
     </div>
 </body>
 
