--- a/contato.html
+++ b/contato.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contatos</title>
+    <link rel="stylesheet" href="./src/css/styles-contatos.css">
+    <link rel="shortcut icon" href="./src/css/imagens/Captura de tela_20240229_113233.ico" type="image/x-icon">
 </head>
+
 <body>
-    
+    <div class="cabecalho">
+        <img class="logo" src="./src/css/imagens/logo.png" alt="Logo da empresa">
+        <div class="link">
+            <a href="./index.html">
+                Home
+            </a>
+            <a href="./quem-somos.html">
+                Quem somos
+            </a>
+            <a href="./contato.html">
+                Contatos
+            </a>
+        </div>
+    </div>
+    <div class="corpo">
+        <h2 class="texto-contato">
+            Entre em contato
+        </h2>
+        <p class="paragrafo">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque maxime omnis dicta vitae, nisi magni quidem
+            illo distinctio atque quasi aperiam fuga quaerat ab. In rem magni laborum similique architecto?
+        </p>
+        <hr>
+    </div>
+    <div class="formulario">
+        <p class="email"><b>Seu e-mail:</b></p>
+        <input type="email">
+
+        <p class="assunto"><b>Assunto:</b></p>
+        <input type="assunto">
+
+        <p class="descricao"><b>Descrição:</b></p>
+        <textarea name="descricao" id="" cols="20" rows="3"></textarea>
+        <br>
+        <input type="submit" name="enviar" value="Enviar">
+    </div>
+    <div class="rodape">
+        <h2>
+            Todos os direitos reservados
+        </h2>
+    </div>
 </body>
+
 </html>
