--- a/index.html
+++ b/index.html
@@ -5,40 +5,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Universidade Unes</title>
-    <link rel="stylesheet" href="./src/css/style.css">
     <link rel="shortcut icon" href="./src/css/imagens/Captura de tela_20240229_113233.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./src/css/style-index.css">
 </head>
 
 <body>
     <div class="cabecalho">
-        <img src="./src/css/imagens/logo.png" alt="Logo da empresa">
-
+        <img class="logo" src="./src/css/imagens/logo.png" alt="Logo da empresa">
         <div class="link">
             <a href="./index.html">
                 Home
             </a>
-
             <a href="./quem-somos.html">
                 Quem somos
             </a>
-
             <a href="./contato.html">
                 Contatos
             </a>
         </div>
     </div>
-
     <div class="corpo">
         <img src="./src/css/imagens/capa.png" alt="Capa da faculdade para divulgação">
     </div>
 
     <div class="texto">
-    <h1 class="titulo">Sobre a Universidade</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ea officia quod fugit vitae a nostrum aut perspiciatis hic quaerat dignissimos, modi et ullam dolor? Suscipit commodi nesciunt tempora molestias. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam fuga, soluta laboriosam repellat adipisci ducimus animi? Cumque porro rerum sed rem fugiat similique eaque magnam asperiores soluta, ullam doloribus expedita.</p>
+        <h1 class="titulo">Sobre a Universidade</h1>
+        <p class="paragrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ea officia quod fugit vitae a nostrum aut perspiciatis hic quaerat dignissimos, modi et ullam dolor? Suscipit commodi nesciunt tempora molestias. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam fuga, soluta laboriosam repellat adipisci ducimus animi? Cumque porro rerum sed rem fugiat similique eaque magnam asperiores soluta, ullam doloribus expedita Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolor aliquid, quaerat provident.
+        </p>
+        <p class="paragrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea nesciunt tempore quisquam magnam quam exercitationem nemo, deserunt inventore distinctio at eum. Officiis neque omnis harum nostrum atque voluptates minima sapiente? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem similique nam cumque eligendi ad eos optio. Culpa nam quia quasi, alias, animi exercitationem veniam reiciendis aliquid cumque sapiente at atque! Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     </div>
 
     <div class="rodape">
-        <h3>Todos os direitos reservados</h3>
+        <h2>Todos os direitos reservados</h2>
     </div>
 </body>
 
