Atualizações finais HTML

--- a/quem-somos.html
+++ b/quem-somos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="shortcut icon" href="./src/css/imagens/Captura de tela_20240229_113233.ico" type="image/x-icon">
     <link rel="stylesheet" href="./src/css/styles-quemsomos.css">
 </head>
+
 <body>
     <div class="cabecalho">
         <img class="logo" src="./src/css/imagens/logo.png" alt="Logo da empresa">
@@ -29,7 +31,12 @@
             Quem Somos
         </h1>
         <p class="paragrafo">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore velit laborum odio fugiat modi, nulla quasi quam ipsum fuga earum non dolor excepturi adipisci labore voluptate aliquid eaque dolores impedit! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum nam iusto pariatur! Iusto quibusdam eos beatae saepe commodi magni cumque aut maxime soluta dolor ducimus, ut dolorum distinctio? Aliquam, aut. Lorem, ipsum dolor sit amet consectetur adipisicing elit. A eos quasi iure deserunt? A ducimus quo, nulla magni itaque facere ab sapiente quis molestiae odio cum corporis, sit dolorem doloribus.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore velit laborum odio fugiat modi, nulla quasi
+            quam ipsum fuga earum non dolor excepturi adipisci labore voluptate aliquid eaque dolores impedit! Lorem
+            ipsum, dolor sit amet consectetur adipisicing elit. Dolorum nam iusto pariatur! Iusto quibusdam eos beatae
+            saepe commodi magni cumque aut maxime soluta dolor ducimus, ut dolorum distinctio? Aliquam, aut. Lorem,
+            ipsum dolor sit amet consectetur adipisicing elit. A eos quasi iure deserunt? A ducimus quo, nulla magni
+            itaque facere ab sapiente quis molestiae odio cum corporis, sit dolorem doloribus.
         </p>
 
         <div class="motivos">
@@ -52,7 +59,7 @@
                 <ul>
                     5. Ótima localização
                 </ul>
-            </div>    
+            </div>
         </div>
         <hr>
     </div>
@@ -60,7 +67,13 @@
         <h1 class="obj">
             Objetivos
         </h1>
-        <p class="texto-obj">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni, eaque iste porro iure voluptatem inventore nemo esse eius deserunt itaque autem vero obcaecati, fugiat alias aut pariatur est maiores corrupti! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque fugiat consequuntur distinctio maxime enim natus facilis, inventore nemo dolor, sequi optio obcaecati quo delectus. Omnis excepturi officia voluptate consequatur eos! Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, laboriosam corporis beatae, consequatur, doloremque itaque similique asperiores dolorum consequuntur fuga quos velit provident nostrum corrupti ab id neque expedita facilis?</p>
+        <p class="texto-obj">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni, eaque iste porro iure
+            voluptatem inventore nemo esse eius deserunt itaque autem vero obcaecati, fugiat alias aut pariatur est
+            maiores corrupti! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque fugiat consequuntur
+            distinctio maxime enim natus facilis, inventore nemo dolor, sequi optio obcaecati quo delectus. Omnis
+            excepturi officia voluptate consequatur eos! Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem,
+            laboriosam corporis beatae, consequatur, doloremque itaque similique asperiores dolorum consequuntur fuga
+            quos velit provident nostrum corrupti ab id neque expedita facilis?</p>
 
     </div>
     <div class="rodape">
@@ -69,4 +82,5 @@
         </h2>
     </div>
 </body>
+
 </html>
