--- a/index.html
+++ b/index.html
@@ -30,9 +30,18 @@
 
     <div class="texto">
         <h1 class="titulo">Sobre a Universidade</h1>
-        <p class="paragrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ea officia quod fugit vitae a nostrum aut perspiciatis hic quaerat dignissimos, modi et ullam dolor? Suscipit commodi nesciunt tempora molestias. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam fuga, soluta laboriosam repellat adipisci ducimus animi? Cumque porro rerum sed rem fugiat similique eaque magnam asperiores soluta, ullam doloribus expedita Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolor aliquid, quaerat provident.
+        <p class="paragrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ea officia quod fugit vitae a
+            nostrum aut perspiciatis hic quaerat dignissimos, modi et ullam dolor? Suscipit commodi nesciunt tempora
+            molestias. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam fuga, soluta laboriosam
+            repellat adipisci ducimus animi? Cumque porro rerum sed rem fugiat similique eaque magnam asperiores soluta,
+            ullam doloribus expedita Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolor aliquid,
+            quaerat provident.
         </p>
-        <p class="paragrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea nesciunt tempore quisquam magnam quam exercitationem nemo, deserunt inventore distinctio at eum. Officiis neque omnis harum nostrum atque voluptates minima sapiente? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem similique nam cumque eligendi ad eos optio. Culpa nam quia quasi, alias, animi exercitationem veniam reiciendis aliquid cumque sapiente at atque! Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p class="paragrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea nesciunt tempore quisquam
+            magnam quam exercitationem nemo, deserunt inventore distinctio at eum. Officiis neque omnis harum nostrum
+            atque voluptates minima sapiente? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem
+            similique nam cumque eligendi ad eos optio. Culpa nam quia quasi, alias, animi exercitationem veniam
+            reiciendis aliquid cumque sapiente at atque! Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     </div>
 
     <div class="rodape">
